set(COMMON_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../common)

add_executable(prob_2_61
        prob_2_61.c
        tests/test_2_61.c
        tests/test_case.c
        ${COMMON_DIR}/library.c
)

add_executable(prob_2_63
        prob_2_63.c
        tests/test_2_63.c
        tests/test_case.c
        ${COMMON_DIR}/library.c
)

add_executable(prob_2_64
prob_2_64.c
tests/test_2_64.c
tests/test_case.c
${COMMON_DIR}/library.c
)

add_executable(prob_2_65
        prob_2_65.c
        tests/test_2_65.c
        tests/test_case.c
        ${COMMON_DIR}/library.c
)

add_executable(prob_2_66
        prob_2_66.c
        tests/test_2_66.c
        tests/test_case.c
        ${COMMON_DIR}/library.c
)

add_executable(prob_2_68
        prob_2_68.c
        tests/test_2_68.c
        tests/test_case.c
        ${COMMON_DIR}/library.c
)

add_executable(prob_2_69
        prob_2_69.c
        tests/test_2_69.c
        tests/test_case.c
        ${COMMON_DIR}/library.c
)
